Fix the layout bug

--- a/src/containers/LandingPage/LandingPage.css
+++ b/src/containers/LandingPage/LandingPage.css
@@ -54,7 +54,7 @@
 
 .hero {
   flex-grow: 1;
-  justify-content: flex-end;
+  justify-content: center;
   padding-bottom: 32px;
   /*max-width: 1500px;*/
   margin: auto;
